[package]
name = "Nexi-Imperial-to-Metric-Conversion"
authors = ["Jason Ngo <jasonngo027@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.NexxieIsNotACoder.imperialtometric"
description = "Convert Imperial to Metric for your non-American friends."
icon = ["./ui/kronii.png"]